@@ -1,3 +1,15 @@
 # calculadora-imc
 
 Projeto de estudos Calculadora IMC utilizando JavaFX
+
+Pra rodar o código, compile usando:
+
+```
+javac --module-path lib --add-modules javafx.controls App.java
+```
+
+Rode usando:
+
+```
+java --module-path lib --add-modules javafx.controls App
+```
